# Skycast

./: .gitignore  Install Requirements.bat  LICENSE  README.md  Run _Google_Cloud_Debian_VM.bat  Run.bat  Run.sh  Run_Linux  Run_Linux.sh  Run_Windows.bat  config.example.py  config.py  config_template.py  pyproject.toml  requirements.txt  skycast.py
scripts/: Check.sh  Run.sh
src/: config_template.py  skycast.py
