[project]
name = "skycast"
version = "0.2.0"
description = "Skycast is a bot that automatically shares podcast posts from [r/PodcastSharing](https://www.reddit.com/r/PodcastSharing) to [@shareapod.bsky.social](https://bsky.app/profile/shareapod.bsky.social)."
authors = [
    {name = "Oussama Gourari"},
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "atproto>=0.0.58",
    "humanize>=4.12.1",
    "pillow>=11.1.0",
    "praw>=7.8.1",
    "rich>=13.9.4",
    "tenacity>=9.0.0",
]

[project.urls]
Repository = "https://github.com/oussama-gourari/Skycast"

[tool.ruff]
target-version = "py313"
